# guile-ncurses-nogceffects

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.cygwin  README.mingw  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac  gitlog2changelog.sh
doc/: Makefile.am  README  ex_attrib.scm  ex_blink.scm  ex_centered_screen.scm  ex_color.scm  ex_form.scm  ex_form2.scm  ex_getnstr.scm  ex_hello_world.scm  ex_hline.scm  ex_init_func_usage.scm  ex_menu.scm  ex_menu2.scm  ex_menu3.scm  ex_panel.scm  ex_window.scm  gucu.info  gucu.info-1  gucu.info-2  gucu.texi  guile-ncurses.texi  makefile.am  stamp-vti  version.texi
gucu/: Makefile.am  compat.c  compat.h  curs_const.c  curs_const.h  curs_func.c  curs_func.h  curs_main.c  curs_port.c  curs_port.h  curs_spec.c  curs_spec.h  curses-wide.scm  curses.scm  eti.scm  eti_const.c  eti_const.h  eti_main.c  features.h  form.scm  form_const.c  form_const.h  form_func.c  form_func.h  form_main.c  form_spec.c  form_spec.h  form_type.c  form_type.h  gettext.h  gucuconfig.h  lib.scm  menu.scm  menu_const.c  menu_const.h  menu_func.c  menu_func.h  menu_main.c  menu_spec.c  menu_spec.h  (+18 more)
lib/: .gitignore
m4/: .gitignore  Makefile.am  geda-guile.m4  gnulib-cache.m4  makefile.am
ncurses/: Makefile.am  compat.c  compat.h  curs_const.c  curs_const.h  curs_func.c  curs_func.h  curs_main.c  curs_port.c  curs_port.h  curs_spec.c  curs_spec.h  curses.scm  eti.scm  eti_const.c  eti_const.h  eti_main.c  extra.scm  extra_const.c  extra_const.h  extra_func.c  extra_func.h  extra_main.c  extra_type.c  extra_type.h  form.scm  form_const.c  form_const.h  form_func.c  form_func.h  form_main.c  form_spec.c  form_spec.h  form_type.c  form_type.h  gucuconfig.h  lib.scm  menu.scm  menu_const.c  menu_const.h  (+31 more)
po/: .gitignore  Makevars  POTFILES.in  guile-ncurses.pot
test/: Makefile.am  c001_char_conversion.test  curses_000_test_setup.test  curses_001_char_conversion.test  curses_002_initscr.test  curses_003_color.test  curses_004_characters.test  curses_005_addch.test  curses_006_addchstr.test  curses_007_addstr.test  curses_008_attr.test  curses_009_beep.test  curses_010_bkgd.test  curses_011_border.test  curses_012_clear.test  curses_013_delch.test  curses_014_deleteln.test  curses_015_getch.test  curses_016_getstr.test  curses_017_getyx.test  curses_018_inch.test  curses_019_inchstr.test  curses_020_inopts.test  curses_021_insch.test  curses_022_insstr.test  curses_023_instr.test  curses_024_kernel.test  curses_025_move.test  curses_026_outputs.test  curses_027_overlay.test  curses_028_pad.test  curses_029_refresh.test  curses_030_scr_dump.test  curses_031_scroll.test  curses_032_termattrs.test  curses_033_touch.test  curses_034_util.test  curses_035_attributes.test  curses_036_ports.test  curses_037_mouse.test  (+71 more)
test/t/: README
tools/: Makefile.am  gucu-keyboard-test  gucu-vi  gucukey  ncurses-keyboard-test  posix-explorer  posix-explorer.scm  pre-inst-gucukey  pre-inst-gucushell  shell.c  testbed.c  uninstalled-env.in
