# Makefile.am for Guile-Ncurses doc

# Copyright 2009, 2010 Free Software Foundation, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation; either version 3, or (at
# your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this program.  If not, see
# <http://www.gnu.org/licenses/>.

info_TEXINFOS = guile-ncurses.texi
guile_ncurses_TEXINFOS = ex_attrib.scm ex_blink.scm		\
	ex_centered_screen.scm ex_color.scm ex_getnstr.scm	\
	ex_hello_world.scm ex_hline.scm ex_init_func_usage.scm	\
	ex_menu.scm ex_menu2.scm ex_menu3.scm ex_panel.scm	\
	ex_window.scm ex_form.scm ex_form2.scm
CLEANFILES = guile-ncurses.dvi